test/libhyperion/syntaxTests/functionTypes/external_function_to_function_type_calldata_parameter.hyp
// This is a test that checks that the type of the `bytes` parameter is
// correctly changed from its own type `bytes calldata` to `bytes memory`
// when converting to a function type.
contract C {
    function f(function(bytes memory) pure external /*g*/) pure public { }
    function callback(bytes calldata) pure external {}
    function g() view public {
        f(this.callback);
    }
}
// ----
// TypeError 4888: (213-256): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
